fix(modal): increased text contrast for dark mode

--- a/scss/configuration/bootstrap/_modal.scss
+++ b/scss/configuration/bootstrap/_modal.scss
@@ -1,7 +1,7 @@
 @use "../colors";
 
 $modal-content-color: colors.$gray-900;
-$modal-content-color-dark: colors.$gray-300;
+$modal-content-color-dark: colors.$gray-100;
 $modal-content-bg: colors.$white;
 $modal-content-bg-dark: colors.$gray-800;
 $modal-content-inner-border-radius: 0;
